Refactored add content to user account page Fixed an issue where descriptions would appear on the next line under the image on overflow.

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -38,7 +38,7 @@
         .ContentBlock {
             position: relative;
             width: 100%;
-            overflow: auto;
+            overflow: hidden;
             & img {
                 float: left;
                 width: 10rem;
