--- a/neuro_arcade/reactapp/src/styles/components/Card.module.css
+++ b/neuro_arcade/reactapp/src/styles/components/Card.module.css
@@ -30,7 +30,7 @@
         width: 100%;
         height: 100%;
     }
-    & p {
+    .Text {
         text-decoration: none;
         text-align: center;
         width: 7em;
